--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,15 @@
                     <mainClass>your.package.with.Launcher</mainClass>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>11</release>
+                    <!--  or 11  -->
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
@@ -79,6 +88,12 @@
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>11</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>11</version>
+            <type>pom</type>
         </dependency>
         <dependency>
             <groupId>org.skyscreamer</groupId>
